--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dedo-finger2.github.io/birthday-checker-typescript",
+  "homepage": "./",
   "name": "birthday-checker",
   "private": true,
   "version": "0.0.0",
